Temporary fix for inactiveToggle alignment when menu is closed
#655

Doesn’t look so great, but at least it eases off layering over the Menu
button. @jophis

Will do this for real as soon as we decide where we want things
positioned. (prefer top of the table for Create button and
inactiveToggle)

--- a/src/managerLayer.styl
+++ b/src/managerLayer.styl
@@ -7,6 +7,7 @@
 
 	.header
 		padding 12px
+		width 90%
 
 	.closeManagerButton
 		background none
